# XShape2

./: CMakeLists.txt  config.h
components/geometry/: CustomField.cpp  CustomField.h
components/visual/: ImplicitFieldShaderVisualization.cpp  ImplicitFieldShaderVisualization.h
examples/: CustomField.scn  CustomFieldVisualization.scn  CustomShaderField.scn  CythonCustomField.scn  DiscreetGrid.scn  ShapeTreeDemo1.psl  SurfaceMeshGenerationFromField.scn  backup_shapes.py  customfield.py  customfield1.py  customfield2.py  customshaderfield.py  cythoncustomfield.py  dfgeom.pyx  example1.psl  exampleShapeH.py  field1.py  gen.py  tripodvrille.psl  tripodvrille.pyscn  tripodvrille.scn  tripodvrille_shape.py
examples/cython/: cythonfield.pyx
examples/project/: dfgeom.pyx  gen.py  scene1.py  vector.h
